[Curl] Fix missing values of  resource timing API. https://bugs.webkit.org/show_bug.cgi?id=190193

Reviewed by Alex Christensen.

Source/WebCore:

The property nextHopProtocol was not returned correctly. It was
returned only when remote inspector is opened.

Tests: http/wpt/resource-timing/rt-nextHopProtocol.html
       http/wpt/resource-timing/rt-nextHopProtocol.worker.html

* platform/network/curl/CurlContext.cpp:
(WebCore::CurlHandle::getNetworkLoadMetrics):
(WebCore::CurlHandle::addExtraNetworkLoadMetrics):

LayoutTests:

* platform/wincairo/TestExpectations:


Canonical link: https://commits.webkit.org/205171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236765 268f45cc-cd09-0410-ab3c-d52691b4dbfc